# planning

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  cmakebackup.txt  log_stp  package.xml  setup.py
.devcontainer/: Dockerfile
.github/workflows/: codeql-analysis.yml
bags/: acceleration_1  acceleration_2.bag
launch/: planning.launch
msg/: CarlaEgoVehicleControl.msg  CarlaEgoVehicleStatus.msg  LTP_Plan.msg  Risk.msg  STP_Data.msg
src/ACT/: PIDController.py  dispatcher.py  geometry.py  setup.py  topics.py
src/LTP/: Bernstein.py  DataGenerator.py  GraphicUtility.py  Main_LTP.py  Parameters.py  PlanStep.py  ROSInterface.py  Race.py  RaceState.py  RandomTracks.py  RiskFunctions.py  SampleTrack.py  TrackMap.py  TrackOptimizer.py  Trajectory.py  TrajectoryOptimizer.ipynb  TrajectoryOptimizer.py  Utils.py  how_to_use.ipynb  subtest.py
src/LTP/create_custom_track/create_track_line_based/: index.html  intersect.js  names.js  save_functions.js  sketch.js
src/LTP/tests/: TestBruteForce.py  TestCircleMidTrajectory.py  TestCircleMidTrajectory.py.json  TestCustomTrack1.py  TestMainLTP.py  TestSkidpad.py  TestStraightMidTrajectory.py  TestTrajectoryInside.py
src/LTP/tests/output/: TestCustomTrack1.JSON
src/LTP/tests/tracks/: TarascoRace.json  acc_slam.json  acceleration.json  neighbourhood_track.json  simplecurve.json
src/LTP/tests/unitary/: test_parameters.py  test_raceinfo.py  (+2 more)
src/STP/: ROS_Stp.py  Stp.py  publisher.py  subscriber.py  test.py
src/planning/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
src/planning/msg/: LTP_Plan.msg  STP_Data.msg
(+18 files in other folders)
